plugins/flutter/pocketpy/lib/pocketpy_bindings_generated.dart


  /// Create a `bytes` object with `n` UNINITIALIZED bytes.
  ffi.Pointer<ffi.UnsignedChar> py_newbytes(
    py_OutRef arg0,
    int n,
  ) {
    return _py_newbytes(
      arg0,
      n,
    );
  }

  late final _py_newbytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(
              py_OutRef, ffi.Int)>>('py_newbytes');
  late final _py_newbytes = _py_newbytesPtr
      .asFunction<ffi.Pointer<ffi.UnsignedChar> Function(py_OutRef, int)>();

  /// Create a `None` object.
  void py_newnone(
    py_OutRef arg0,
  ) {
    return _py_newnone(
      arg0,
    );
  }

  late final _py_newnonePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef)>>('py_newnone');
  late final _py_newnone =
      _py_newnonePtr.asFunction<void Function(py_OutRef)>();

  /// Create a `NotImplemented` object.
  void py_newnotimplemented(
    py_OutRef arg0,
  ) {
    return _py_newnotimplemented(
      arg0,
    );
  }

  late final _py_newnotimplementedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef)>>(
          'py_newnotimplemented');
  late final _py_newnotimplemented =
      _py_newnotimplementedPtr.asFunction<void Function(py_OutRef)>();

  /// Create a `...` object.
  void py_newellipsis(
    py_OutRef arg0,
  ) {
    return _py_newellipsis(
      arg0,
    );
  }

  late final _py_newellipsisPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef)>>(
          'py_newellipsis');
  late final _py_newellipsis =
      _py_newellipsisPtr.asFunction<void Function(py_OutRef)>();

  /// Create a `nil` object. `nil` is an invalid representation of an object.
  /// Don't use it unless you know what you are doing.
  void py_newnil(
    py_OutRef arg0,
  ) {
    return _py_newnil(
      arg0,
    );
  }

  late final _py_newnilPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef)>>('py_newnil');
  late final _py_newnil = _py_newnilPtr.asFunction<void Function(py_OutRef)>();

  /// Create a `tuple` with `n` UNINITIALIZED elements.
  /// You should initialize all elements before using it.
  void py_newtuple(
    py_OutRef arg0,
    int n,
  ) {
    return _py_newtuple(
      arg0,
      n,
    );
  }

  late final _py_newtuplePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef, ffi.Int)>>(
          'py_newtuple');
  late final _py_newtuple =
      _py_newtuplePtr.asFunction<void Function(py_OutRef, int)>();

  /// Create an empty `list`.
  void py_newlist(
    py_OutRef arg0,
  ) {
    return _py_newlist(
      arg0,
    );
  }

  late final _py_newlistPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef)>>('py_newlist');
  late final _py_newlist =
      _py_newlistPtr.asFunction<void Function(py_OutRef)>();

  /// Create a `list` with `n` UNINITIALIZED elements.
  /// You should initialize all elements before using it.
  void py_newlistn(
    py_OutRef arg0,
    int n,
  ) {
    return _py_newlistn(
      arg0,
      n,
    );
  }

  late final _py_newlistnPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef, ffi.Int)>>(
          'py_newlistn');
  late final _py_newlistn =
      _py_newlistnPtr.asFunction<void Function(py_OutRef, int)>();

  /// Create an empty `dict`.
  void py_newdict(
    py_OutRef arg0,
  ) {
    return _py_newdict(
      arg0,
    );
  }

  late final _py_newdictPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef)>>('py_newdict');
  late final _py_newdict =
      _py_newdictPtr.asFunction<void Function(py_OutRef)>();

  /// Create an UNINITIALIZED `slice` object.
  /// You should use `py_setslot()` to set `start`, `stop`, and `step`.
  void py_newslice(
    py_OutRef arg0,
  ) {
    return _py_newslice(
      arg0,
    );
  }

  late final _py_newslicePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef)>>('py_newslice');
  late final _py_newslice =
      _py_newslicePtr.asFunction<void Function(py_OutRef)>();

  /// Create a `nativefunc` object.
  void py_newnativefunc(
    py_OutRef arg0,
    py_CFunction arg1,
  ) {
    return _py_newnativefunc(
      arg0,
      arg1,
    );
  }

  late final _py_newnativefuncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef, py_CFunction)>>(
          'py_newnativefunc');
  late final _py_newnativefunc =
      _py_newnativefuncPtr.asFunction<void Function(py_OutRef, py_CFunction)>();

  /// Create a `function` object.
  int py_newfunction(
    py_OutRef out,
    ffi.Pointer<ffi.Char> sig,
    py_CFunction f,
    ffi.Pointer<ffi.Char> docstring,
    int slots,
  ) {
    return _py_newfunction(
      out,
      sig,
      f,
      docstring,
      slots,
    );
  }

  late final _py_newfunctionPtr = _lookup<
      ffi.NativeFunction<
          py_Name Function(py_OutRef, ffi.Pointer<ffi.Char>, py_CFunction,
              ffi.Pointer<ffi.Char>, ffi.Int)>>('py_newfunction');
  late final _py_newfunction = _py_newfunctionPtr.asFunction<
      int Function(py_OutRef, ffi.Pointer<ffi.Char>, py_CFunction,
          ffi.Pointer<ffi.Char>, int)>();

  /// Create a `boundmethod` object.
  void py_newboundmethod(
    py_OutRef out,
    py_Ref self,
    py_Ref func,
  ) {
    return _py_newboundmethod(
      out,
      self,
      func,
    );
  }

  late final _py_newboundmethodPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef, py_Ref, py_Ref)>>(
          'py_newboundmethod');
  late final _py_newboundmethod = _py_newboundmethodPtr
      .asFunction<void Function(py_OutRef, py_Ref, py_Ref)>();

  /// Convert a null-terminated string to a name.
  int py_name(
    ffi.Pointer<ffi.Char> arg0,
  ) {
    return _py_name(
      arg0,
    );
  }

  late final _py_namePtr =
      _lookup<ffi.NativeFunction<py_Name Function(ffi.Pointer<ffi.Char>)>>(
          'py_name');
  late final _py_name =
      _py_namePtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Convert a name to a null-terminated string.
  ffi.Pointer<ffi.Char> py_name2str(
    int arg0,
  ) {
    return _py_name2str(
      arg0,
    );
  }

  late final _py_name2strPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(py_Name)>>(
          'py_name2str');
  late final _py_name2str =
      _py_name2strPtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// Convert a `c11_sv` to a name.
  int py_namev(
    c11_sv arg0,
  ) {
    return _py_namev(
      arg0,
    );
  }

  late final _py_namevPtr =
      _lookup<ffi.NativeFunction<py_Name Function(c11_sv)>>('py_namev');
  late final _py_namev = _py_namevPtr.asFunction<int Function(c11_sv)>();

  /// Convert a name to a `c11_sv`.
  c11_sv py_name2sv(
    int arg0,
  ) {
    return _py_name2sv(
      arg0,
    );
  }

  late final _py_name2svPtr =
      _lookup<ffi.NativeFunction<c11_sv Function(py_Name)>>('py_name2sv');
  late final _py_name2sv = _py_name2svPtr.asFunction<c11_sv Function(int)>();

  /// Create a new type.
  /// @param name name of the type.
  /// @param base base type.
  /// @param module module where the type is defined. Use `NULL` for built-in types.
  /// @param dtor destructor function. Use `NULL` if not needed.
  int py_newtype(
    ffi.Pointer<ffi.Char> name,
    int base,
    py_GlobalRef module,
    py_Dtor dtor,
  ) {
    return _py_newtype(
      name,
      base,
      module,
      dtor,
    );
  }

  late final _py_newtypePtr = _lookup<
      ffi.NativeFunction<
          py_Type Function(ffi.Pointer<ffi.Char>, py_Type, py_GlobalRef,
              py_Dtor)>>('py_newtype');
  late final _py_newtype = _py_newtypePtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, int, py_GlobalRef, py_Dtor)>();

  /// Create a new object.
  /// @param out output reference.
  /// @param type type of the object.
  /// @param slots number of slots. Use `-1` to create a `__dict__`.
  /// @param udsize size of your userdata.
  /// @return pointer to the userdata.
  ffi.Pointer<ffi.Void> py_newobject(
    py_OutRef out,
    int type,
    int slots,
    int udsize,
  ) {
    return _py_newobject(
      out,
      type,
      slots,
      udsize,
    );
  }

  late final _py_newobjectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              py_OutRef, py_Type, ffi.Int, ffi.Int)>>('py_newobject');
  late final _py_newobject = _py_newobjectPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(py_OutRef, int, int, int)>();

  /// Convert an `int` object in python to `int64_t`.
  int py_toint(
    py_Ref arg0,
  ) {
    return _py_toint(
      arg0,
    );
  }

  late final _py_tointPtr =
      _lookup<ffi.NativeFunction<py_i64 Function(py_Ref)>>('py_toint');
  late final _py_toint = _py_tointPtr.asFunction<int Function(py_Ref)>();

  /// Convert a `float` object in python to `double`.
  double py_tofloat(
    py_Ref arg0,
  ) {
    return _py_tofloat(
      arg0,
    );
  }

  late final _py_tofloatPtr =
      _lookup<ffi.NativeFunction<py_f64 Function(py_Ref)>>('py_tofloat');
  late final _py_tofloat = _py_tofloatPtr.asFunction<double Function(py_Ref)>();

  /// Cast a `int` or `float` object in python to `double`.
  /// If successful, return true and set the value to `out`.
  /// Otherwise, return false and raise `TypeError`.
  bool py_castfloat(
    py_Ref arg0,
    ffi.Pointer<py_f64> out,
  ) {
    return _py_castfloat(
      arg0,
      out,
    );
  }

  late final _py_castfloatPtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(py_Ref, ffi.Pointer<py_f64>)>>(
      'py_castfloat');
  late final _py_castfloat =
      _py_castfloatPtr.asFunction<bool Function(py_Ref, ffi.Pointer<py_f64>)>();

  /// 32-bit version of `py_castfloat`.
  bool py_castfloat32(
    py_Ref arg0,
    ffi.Pointer<ffi.Float> out,
  ) {
    return _py_castfloat32(
      arg0,
      out,
    );
  }

  late final _py_castfloat32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(py_Ref, ffi.Pointer<ffi.Float>)>>('py_castfloat32');
  late final _py_castfloat32 = _py_castfloat32Ptr
      .asFunction<bool Function(py_Ref, ffi.Pointer<ffi.Float>)>();

  /// Cast a `int` object in python to `int64_t`.
  bool py_castint(
    py_Ref arg0,
    ffi.Pointer<py_i64> out,
  ) {
    return _py_castint(
      arg0,
      out,
    );
  }

  late final _py_castintPtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(py_Ref, ffi.Pointer<py_i64>)>>(
      'py_castint');
  late final _py_castint =
      _py_castintPtr.asFunction<bool Function(py_Ref, ffi.Pointer<py_i64>)>();

  /// Convert a `bool` object in python to `bool`.
  bool py_tobool(
    py_Ref arg0,
  ) {
    return _py_tobool(
      arg0,
    );
  }

  late final _py_toboolPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref)>>('py_tobool');
  late final _py_tobool = _py_toboolPtr.asFunction<bool Function(py_Ref)>();

  /// Convert a `type` object in python to `py_Type`.
  int py_totype(
    py_Ref arg0,
  ) {
    return _py_totype(
      arg0,
    );
  }

  late final _py_totypePtr =
      _lookup<ffi.NativeFunction<py_Type Function(py_Ref)>>('py_totype');
  late final _py_totype = _py_totypePtr.asFunction<int Function(py_Ref)>();

  /// Convert a `str` object in python to null-terminated string.
  ffi.Pointer<ffi.Char> py_tostr(
    py_Ref arg0,
  ) {
    return _py_tostr(
      arg0,
    );
  }

  late final _py_tostrPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(py_Ref)>>(
          'py_tostr');
  late final _py_tostr =
      _py_tostrPtr.asFunction<ffi.Pointer<ffi.Char> Function(py_Ref)>();

  /// Convert a `str` object in python to char array.
  ffi.Pointer<ffi.Char> py_tostrn(
    py_Ref arg0,
    ffi.Pointer<ffi.Int> size,
  ) {
    return _py_tostrn(
      arg0,
      size,
    );
  }

  late final _py_tostrnPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              py_Ref, ffi.Pointer<ffi.Int>)>>('py_tostrn');
  late final _py_tostrn = _py_tostrnPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(py_Ref, ffi.Pointer<ffi.Int>)>();
